# emmylua-analyzer-rust

./: .gitignore  .python-version  CHANGELOG.md  Cargo.toml  README.md  flake.nix  index.html  rustfmt.toml  typos.toml
crates/code_analysis/: Cargo.toml
crates/code_analysis/locales/: buildin.yml  lint.yml
crates/code_analysis/src/: lib.rs
crates/code_analysis/src/compilation/: mod.rs
crates/code_analysis/src/compilation/analyzer/: mod.rs
crates/code_analysis/src/config/: config_loader.rs  emmyrc.rs  mod.rs
crates/code_analysis/src/config/configs/: codelen.rs  completion.rs  diagnostics.rs  hover.rs  inlayhint.rs  mod.rs  references.rs  resource.rs  runtime.rs  semantictoken.rs  signature.rs  strict.rs  workspace.rs
crates/code_analysis/src/config/flatten_config/: mod.rs
crates/code_analysis/src/db_index/: mod.rs  traits.rs
crates/code_analysis/src/db_index/declaration/: decl.rs  decl_tree.rs  mod.rs  scope.rs  test.rs
crates/code_analysis/src/db_index/description/: description.rs  mod.rs
crates/code_analysis/src/db_index/diagnostic/: analyze_error.rs  diagnostic_action.rs  mod.rs
crates/code_analysis/src/db_index/flow/: flow_chain.rs  mod.rs
crates/code_analysis/src/db_index/member/: lua_member.rs  mod.rs
crates/code_analysis/src/db_index/meta/: mod.rs
crates/code_analysis/src/db_index/module/: mod.rs  module_info.rs  test.rs
crates/code_analysis/src/db_index/operators/: lua_operator.rs  lua_operator_meta_method.rs  mod.rs
crates/code_analysis/src/db_index/property/: mod.rs  property.rs  version.rs
crates/code_analysis/src/db_index/reference/: global_reference.rs  local_reference.rs  mod.rs  string_reference.rs
crates/code_analysis/src/db_index/signature/: mod.rs  signature.rs
crates/code_analysis/src/db_index/symbol/: lua_symbol.rs  lua_symbol_kind.rs  mod.rs
crates/code_analysis/src/db_index/type/: humanize_type.rs  instantiate_generic.rs  mod.rs  test.rs  total_f64.rs  type_assert.rs  type_decl.rs  types.rs
crates/code_analysis/src/diagnostic/: lua_diagnostic.rs  lua_diagnostic_code.rs  lua_diagnostic_severity.rs  mod.rs
crates/code_analysis/src/diagnostic/checker/: access_invisible.rs  analyze_error.rs  await_in_sync.rs  discard_returns.rs  duplicate_type.rs  local_const_reassign.rs  lua_syntax_error.rs  missing_parameter.rs  mod.rs  need_check_nil.rs  param_type_check.rs  syntax_error.rs  type_not_found.rs  undefined_global.rs  unused.rs
crates/code_analysis/src/profile/: mod.rs
crates/code_analysis/src/render/: mod.rs
crates/code_analysis/src/semantic/: mod.rs
crates/code_analysis/src/semantic/call_func/: mod.rs
crates/code_analysis/src/semantic/infer/: infer_binary.rs  infer_call.rs  infer_config.rs  infer_index.rs  infer_name.rs  infer_table.rs  infer_unary.rs  mod.rs
crates/code_analysis/src/semantic/instantiate/: instantiate_class_generic.rs  instantiate_func_generic.rs  mod.rs  tpl_pattern.rs  type_substitutor.rs
crates/code_analysis/src/semantic/member/: infer_members.rs  mod.rs
crates/code_analysis/src/semantic/overload_resolve/: mod.rs
crates/code_analysis/src/semantic/reference/: mod.rs
crates/code_analysis/src/semantic/semantic_info/: infer_expr_info.rs  (+2 more)
crates/code_analysis/src/vfs/: document.rs  file_uri_handler.rs  in_filed.rs  loader.rs  mod.rs  test.rs
crates/emmylua_check/: Cargo.toml  README.md
crates/emmylua_check/src/: cmd_args.rs  init.rs  lib.rs  main.rs
crates/emmylua_check/src/output/: json_output_writer.rs  json_output_writter.rs  mod.rs  text_output_writer.rs  text_output_writter.rs
crates/emmylua_check/src/terminal_display/: display.rs  mod.rs
crates/emmylua_doc_cli/: Cargo.toml  README.md
crates/emmylua_doc_cli/src/: cmd_args.rs  common.rs  init.rs  lib.rs  main.rs
crates/emmylua_doc_cli/src/json_generator/: export.rs  json_types.rs  mod.rs
crates/emmylua_doc_cli/src/markdown_generator/: global_gen.rs  index_gen.rs  init_tl.rs  markdown_types.rs  mixin_copy.rs  mod.rs  mod_gen.rs  render.rs  typ_gen.rs
crates/emmylua_doc_cli/template/: index_template.tl  lua_alias_template.tl  lua_enum_template.tl  lua_global_template.tl  lua_global_template_simple.tl  lua_module_template.tl  lua_type_template.tl  mkdocs_template.tl
crates/emmylua_ls/: Cargo.toml  README.md
crates/emmylua_ls/locales/: misc.yaml
crates/emmylua_ls/locales/action/: zh_CN.yaml
crates/emmylua_ls/locales/keywords/: en.yaml  zh_CN.yaml  zh_HK.yaml
crates/emmylua_ls/locales/tags/: en.yaml  zh_CN.yaml  zh_HK.yaml
crates/emmylua_ls/src/: cmd_args.rs  lib.rs  main.rs  main_loop.rs
crates/emmylua_ls/src/context/: cancel_token.rs  client.rs  client_id.rs  config_manager.rs  file_diagnostic.rs  mod.rs  snapshot.rs  status_bar.rs  workspace_manager.rs
crates/emmylua_ls/src/handlers/: initialized_handler.rs  mod.rs  notification_handler.rs  request_handler.rs  response_handler.rs  text_document_handler.rs
crates/emmylua_ls/src/logger/: mod.rs
crates/emmylua_ls/src/meta_text/: mod.rs
crates/emmylua_ls/src/util/: desc.rs  humanize_type.rs  mod.rs  module_name_convert.rs
crates/emmylua_parser/: Cargo.toml  README.md
crates/emmylua_parser/locales/: app.yml
crates/emmylua_parser/src/: lib.rs  test.rs
crates/emmylua_parser/src/grammar/: mod.rs
crates/emmylua_parser/src/kind/: lua_language_level.rs  lua_non_std_symbol.rs  lua_operator_kind.rs  lua_syntax_kind.rs  lua_token_kind.rs  lua_type_operator_kind.rs  lua_version.rs  lua_visibility_kind.rs  mod.rs
crates/emmylua_parser/src/lexer/: lexer_config.rs  lua_doc_lexer.rs  lua_lexer.rs  mod.rs  test.rs  token_data.rs
crates/emmylua_parser/src/parser/: lua_doc_parser.rs  lua_parser.rs  marker.rs  mod.rs  parser_config.rs
crates/emmylua_parser/src/parser_error/: mod.rs
crates/emmylua_parser/src/syntax/: comment_trait.rs  lua_syntax_tree.rs  mod.rs  traits.rs
crates/emmylua_parser/src/text/: line_index.rs  mod.rs  reader.rs  test.rs  text_range.rs
crates/emmylua_parser_desc/: Cargo.toml
crates/emmylua_parser_desc/src/: lib.rs  md.rs  ref_target.rs  rst.rs  testlib.rs  util.rs
crates/emmylua_parser_desc/src/lang/: lua.rs  mod.rs
(+802 files in other folders)
