[workspace]
resolver = "2"
members = [
    "crates/*",
]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] } 
serde_json = "1"
rowan = { version = "0.16" }
notify = { version = "6.1.1", features = ["serde"] }
lsp-types = { version = "0.97.0", features = ["proposed"]}
schemars = "0.8.21"
regex = "1"
internment = { version = "0.8", features = ["arc"] }
rust-i18n = "3"
log = "0.4"
fern = "0.7"
chrono = "0.4"
tokio-util = "0.7"
walkdir = "2.5.0"
serde_yml = "0.0.12"
dirs = "5"
emmylua_codestyle = "0.2.0"
structopt = "0.3"