[package]
name = "code_analysis"
version = "0.1.0"
edition = "2021"

[dependencies]
url = "2.5.2"
emmylua_parser = { path = "../emmylua_parser" }
globset = "0.4.15"

flagset = "0.4.6"
encoding_rs = "0.8"

serde.workspace = true
serde_json.workspace = true
lsp-types.workspace = true
schemars.workspace = true
rowan.workspace = true
regex.workspace = true
internment.workspace = true
log.workspace = true
tokio-util.workspace = true
rust-i18n.workspace = true
walkdir.workspace = true
dirs.workspace = true

[package.metadata.i18n]
available-locales = ["en", "zh_CN", "zh_HK", "zh_TW"]
default-locale = "en"