[package]
name = "emmylua_doc_cli"
version = "0.1.0"
edition = "2021"
authors = ["CppCXY"]
description = "A command-line tool for generating lua documentation."
license = "MIT"
repository = "https://github.com/CppCXY/emmylua-analyzer-rust"
readme = "README.md"
keywords = ["emmylua", "doc", "lua", "cli"]
categories = ["development-tools", "documentation"]
include = ["resources/**"]

[dependencies]
code_analysis = { path = "../code_analysis" }
emmylua_parser = { path = "../emmylua_parser" }
serde.workspace = true
serde_json.workspace = true
lsp-types.workspace = true
rowan.workspace = true
walkdir.workspace = true
structopt.workspace = true
tera.workspace = true
