[package]
name = "emmylua_ls"
version = "0.4.0"
edition = "2021"

[dependencies]
# local
emmylua_code_analysis.workspace = true
emmylua_parser.workspace = true

# external
lsp-server.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
lsp-types.workspace = true
log.workspace = true
fern.workspace = true
chrono.workspace = true
notify.workspace = true
tokio-util.workspace = true
rowan.workspace = true
emmylua_codestyle.workspace = true
walkdir.workspace = true
structopt.workspace = true
rust-i18n.workspace = true
glob.workspace = true
serde_yml.workspace = true
