[package]
name = "emmylua_parser"
version = "0.3.3"
edition = "2021"
authors = ["CppCXY"]
description = "A parser for EmmyLua and luals"
license = "MIT"
repository = "https://github.com/CppCXY/emmylua-analyzer-rust"
readme = "README.md"
keywords = ["emmylua", "luals", "parser", "lua"]
categories = ["development-tools", "parsing"]

[dependencies]
rowan.workspace = true
